test/cli/test/simple/kyverno-test.yaml
name: test-simple
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  namespace: test
  policy: duration-test
  resources:
  - test-lifetime-fail
  result: fail
  rule: greater-than
- kind: Pod
  namespace: test
  policy: duration-test
  resources:
  - test-lifetime-fail
  result: pass
  rule: less-than
- kind: Pod
  namespace: test
  policy: duration-test
  resources:
  - test-lifetime-fail
  result: fail
  rule: greater-equal-than
- kind: Pod
  namespace: test
  policy: restrict-pod-counts
  resources:
  - test-require-image-tag-pass
  - test-require-image-tag-fail
  - test-validate-image-tag-fail
  - test-validate-image-tag-pass
  result: fail
  rule: restrict-pod-count
- kind: Pod
  namespace: test
  policy: disallow-latest-tag
  resources:
  - test-require-image-tag-pass
  result: pass
  rule: require-image-tag
- kind: Pod
  namespace: test
  policy: disallow-latest-tag
  resources:
  - test-require-image-tag-fail
  result: fail
  rule: require-image-tag
- kind: Pod
  namespace: test
  policy: disallow-latest-tag
  resources:
  - test-validate-image-tag-pass
  result: pass
  rule: validate-image-tag
- kind: Pod
  namespace: test
  policy: disallow-latest-tag
  resources:
  - test-validate-image-tag-fail
  result: fail
  rule: validate-image-tag
- kind: Pod
  namespace: test
  policy: duration-test
  resources:
  - test-lifetime-fail
  result: pass
  rule: less-equal-than
- kind: Pod
  policy: restrict-pod-counts
  resources:
  - myapp-pod
  - test-validate-image-tag-ignore
  result: fail
  rule: restrict-pod-count
variables: values.yaml
