test/cli/test/simple/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-require-image-tag-pass
  namespace: test
  labels:
    app: app
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-require-image-tag-fail
  namespace: test
  labels:
    app: app
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: test-validate-image-tag-ignore
  namespace: default
  labels:
    app: app
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-validate-image-tag-fail
  namespace: test
  labels:
    app: app
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-validate-image-tag-pass
  namespace: test
  labels:
    app: app
spec:
  containers:
  - name: nginx
    image: nginx:1.12
