test/cli/test/simple/test.yaml
name: test-simple
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: validate-image-tag
    resource: test-web
    status: fail
  - policy: disallow-latest-tag
    rule: validate-image-tag
    resource: test-app
    status: pass
