test/cli/test/simple/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: restrict-pod-counts
  resources:
  - name: myapp-pod
    values:
      request.operation: CREATE
  - name: test-require-image-tag-pass
  - name: test-require-image-tag-fail
    values:
      request.operation: CREATE
  - name: test-validate-image-tag-ignore
  - name: test-validate-image-tag-fail
  - name: test-validate-image-tag-pass
  rules:
  - name: restrict-pod-count
    values:
      podcounts: "40"
